...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rider.HomePage">

    <Button
        android:id="@+id/RiderTripsListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewTrips"
        android:text="View Trips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/findRideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchRides"
        android:text="Find a trip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
